Properly change the state of the pause action

We were failing to change the state of the pause action on state change
requests, so the Pause item in the app menu was forever set to false.

https://bugzilla.gnome.org/show_bug.cgi?id=724439